k8s/applications/ai/openwebui/webui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-webui-deployment
  namespace: open-webui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: open-webui
  template:
    metadata:
      labels:
        app: open-webui
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: webui-volume
          persistentVolumeClaim:
            claimName: open-webui-pvc
        - name: tmp
          emptyDir: {}
      containers:
      - name: open-webui
        image: ghcr.io/open-webui/open-webui:main
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop: ["ALL"]
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "250m"
            memory: "512Mi"
          limits:
            cpu: "1000m"
            memory: "2Gi"
        tty: true
        volumeMounts:
        - name: webui-volume
          mountPath: /app/backend/data
        - name: tmp
          mountPath: /tmp
