k8s/applications/ai/openwebui/webui-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: open-webui
  namespace: open-webui
spec:
  serviceName: "open-webui-service"
  replicas: 1
  selector:
    matchLabels:
      app: open-webui
  volumeClaimTemplates:
  - metadata:
      name: openwebui-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "proxmox-csi"
      resources:
        requests:
          storage: 10Gi
  template:
    metadata:
      labels:
        app: open-webui
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: tmp
          emptyDir:
            sizeLimit: 1Gi
        - name: static-files
          emptyDir:
            sizeLimit: 2Gi
      containers:
        - name: open-webui
          image: ghcr.io/open-webui/open-webui:v0.11.4-slim
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ['ALL']
          volumeMounts:
            - name: openwebui-data
              mountPath: /app/backend/data
            - name: tmp
              mountPath: /tmp
            - name: static-files
              mountPath: /app/backend/open_webui/static
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: '500m'
              memory: '1Gi'
            limits:
              cpu: '1000m'
              memory: '2Gi'
          tty: true
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 30
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 15
            timeoutSeconds: 30
            failureThreshold: 3
          startupProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 120
