k8s/applications/ai/openwebui/pipelines-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pipelines
  namespace: open-webui
  labels:
    app: openwebui-pipelines
spec:
  type: ClusterIP
  selector:
    app: openwebui-pipelines
  ports:
    - name: http
      port: 9099
      targetPort: http
      protocol: TCP
