k8s/applications/ai/openwebui/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: open-webui
  namespace: open-webui
spec:
  parentRefs:
    - name: external  # Use the same external gateway for consistency
      namespace: gateway  # This should be the namespace where your gateway is configured
  hostnames:
    - 'open-webui.kube.pc-tips.se'
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: open-webui-service
          port: 8080
