k8s/applications/ai/openwebui/mcpo-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: mcpo
  namespace: open-webui
spec:
  endpointSelector:
    matchLabels:
      app: mcpo
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: open-webui
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toFQDNs:
        - matchName: arxiv.org
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toCIDR: ["10.0.0.0/8"]
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
